--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#D81B60</color>
     <color name="colorPrimaryDark">#A9A9A9</color>
     <color name="colorAccent">#0000FF</color>
+    <color name="colorWhite">#FFFF</color>
 </resources>
