--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#A9A9A9</color>
     <color name="colorAccent">#0000FF</color>
     <color name="colorWhite">#FFFF</color>
+    <color name="backgroundColor">#FFF2DB</color>
 </resources>
