--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -86,6 +86,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_row="3"
+            android:autoLink="web"
             android:layout_column="1" />
     </GridLayout>
 </ScrollView>
