--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,13 +4,13 @@
     <item
         android:id="@+id/home"
         android:enabled="true"
-        android:icon="@drawable/cooking_icon"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="Home"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/search"
         android:enabled="true"
-        android:icon="@drawable/cooking_icon"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="Find Recipes"
         app:showAsAction="ifRoom" />
 </menu>
